Added Media Query for Resolutions below 34em (544px)

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
   <!-- Update your html tag to include the itemscope and itemtype attributes. -->
   <!-- html itemscope itemtype="http://schema.org/{CONTENT_TYPE}" -->
   <meta itemprop="name" content="nerv Computer Services">
-  <meta itemprop="description" content="Just a simple bootstrap theme developed by me">
+  <meta itemprop="description" content="Simple bootstrap Template">
   <meta itemprop="image" content="img/logo.png">
   <!-- Twitter -->
-  <meta name="twitter:card" content="Just a simple bootstrap theme developed by me">
+  <meta name="twitter:card" content="Simple bootstrap Template">
   <meta name="twitter:site" content="@HSumrat">
   <meta name="twitter:title" content="nerv Computer Services">
-  <meta name="twitter:description" content="Just a simple bootstrap theme developed by me">
+  <meta name="twitter:description" content="Simple bootstrap Template">
   <meta name="twitter:creator" content="@HSumrat">
   <meta name="twitter:image:src" content="img/logo.png">
   <meta name="twitter:player" content="">
   <!-- Open Graph General (Facebook & Pinterest) -->
   <meta property="og:url" content="">
   <meta property="og:title" content="nerv Computer Services">
-  <meta property="og:description" content="Just a simple bootstrap theme developed by me">
+  <meta property="og:description" content="Simple bootstrap Template">
   <meta property="og:site_name" content="">
   <meta property="og:image" content="img/logo.png">
   <meta property="fb:admins" content="">
@@ -156,25 +156,26 @@
         <div class="col-sm-12">
           <center>
             <h1>About Us</h1>
-            <p>Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras ornare tristique elit.</p>
+            <p>Morbi in sem quis dui placerat ornare. Pellentesque odio nisi, euismod in, pharetra a, ultricies in, diam. Sed arcu. Cras consequat.
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Cras ornare tristique elit.</p>
           </center>
         </div>
       </div>
-      <div class="row">
+      <div class="row desc">
         <div class="col-md-3">
-          <center style="padding-bottom: 20px; border-right: 1.5px solid #848ba1;">
+          <center>
             <h3>200</h3>
             <span>clients</span>
           </center>
         </div>
         <div class="col-md-3">
-          <center style="padding-bottom: 20px; border-right: 1.5px solid #848ba1;">
+          <center>
             <h3>54</h3>
             <span>clients</span>
           </center>
         </div>
         <div class="col-md-3">
-          <center style="padding-bottom: 20px; border-right: 1.5px solid #848ba1;">
+          <center>
             <h3>1000</h3>
             <span>clients</span>
           </center>
@@ -192,7 +193,7 @@
   
   <!-- Contact -->
   <section id="contact">
-    <div class="container-fluid">
+    <div class="container">
       <div class="row">
         <h1>contact us</h1>
         <div class="col-lg-8 col-md-8 col-sm-6 col-xs-12">
@@ -234,48 +235,48 @@
           <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <img src="img/logo.png " width="65" height="65">
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. 
-            Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+            Suspendisse urna nibh, viverra non,</p>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <ul>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
+              <li><a href="/ ">Residential Services</a></li>
+              <li><a href="/ ">Desktop & Laptop Support</a></li>
+              <li><a href="/ ">Computer Setup</a></li>
+              <li><a href="/ ">Home Networking</a></li>
+              <li><a href="/ ">Optimization</a></li>
+              <li><a href="/ ">Printer Support</a></li>
+              <li><a href="/ ">Spyware & Virus Removal</a></li>
+              <li><a href="/ ">Troubleshooting & Repair</a></li>
+              <li><a href="/ ">Software Support</a></li>
+              <li><a href="/ ">Email Setup & Troubleshooting</a></li>
             </ul>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <ul>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
+              <li><a href="/ ">Internet Browsing</a></li>
+              <li><a href="/ ">Office & Productivity</a></li>
+              <li><a href="/ ">Online Security</a></li>
+              <li><a href="/ ">Data Recovery</a></li>
+              <li><a href="/ ">Apple Service</a></li>
+              <li><a href="/ ">Workstation Repair</a></li>
+              <li><a href="/ ">Server Maintenance</a></li>
+              <li><a href="/ ">Microsoft Windows Server</a></li>
+              <li><a href="/ ">Microsoft Exchange Server</a></li>
+              <li><a href="/ ">Microsoft Small Business Server</a></li>
             </ul>
           </div>
           <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
             <ul class="no-border">
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
-              <li><a href="/ ">Lorem ipsum</a></li>
+              <li><a href="/ ">Emergency Data Recovery</a></li>
+              <li><a href="/ ">Network Monitoring</a></li>
+              <li><a href="/ ">Software Support</a></li>
+              <li><a href="/ ">Microsoft Windows 7</a></li>
+              <li><a href="/ ">Microsoft Windows Vista</a></li>
+              <li><a href="/ ">Microsoft Windows XP</a></li>
+              <li><a href="/ ">Mac OS X</a></li>
+              <li><a href="/ ">Network Monitoring</a></li>
+              <li><a href="/ ">Business Services</a></li>
+              <li><a href="/ ">Time Sensitive Repair</a></li>
             </ul>
           </div>
         </div>
